
Release 5.0.6 (unreleased)
==========================

Bug fixes
---------

- Fixes for data assimilation of module atmo:
  * implicit part of nudging term
  * reader of optimal interpolation file
  * optimal interpolation for sequential runs
  * output settings (log, vis, restart) of analysis field
  * missing loop over dimension in debug and log
  * a debugging switch.

- Fix deadlock in mesh extrusion when some ranks have no boundary faces.

Release 5.0.5 (Dec 20 2017)
===========================

User changes
------------

- GUI: enable "separate meshes" writer option (already available
  through user functions) through the GUI. This option allows for
  separate sub-writers being used for each associated mesh (avoiding
  the frequent need for the "Separate Blocks" operation in ParaView).

Bug fixes
---------

- GUI: fix crash in fluid structure interaction page in builds using PyQt5.

- Fix interlock in Syrthes coupling when combining surface and volume coupling.

- Fix in Rij EBRSM coupled solver (improve robustness).

- "separate_meshes" writer option should not propagate to EnSight
  mesh groups output.

- Fix issue #246 (crash in cs_selector_get_cells_boundary / getceb).

- Fix computation of pressure gradient in lagrangian equations for some cases:
  * retrieve 2/3*rho*k from P if an EVM turbulence model is enabled
  * retrieve rho0*g from grad(P) even if iphydr=1.

- Fix in post-processing of wrong user boundary conditions.

- Fix implicit part of the Coriolis source term in the momentum
  (turbomachinery module).

- Salome_CFD: fix launch for user builds where CS_ROOT_DIR is not defined.

- Fix link with user functions for movable builds linking directly with
  Catalyst (e.g. Salome_CFD).

- GUI: fix handling of exchange coefficient boundary conditions.

- Fix automatic installer crash due to malformed string format.

- Fix in radiative FSCK model.

- Fix "code_saturne submit" whith mesh import only mode.
